sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.error
AlgSelectionSort:25: error: not found: value i
    echange(caseMinimum,i)
                        ^